# intu_cleaner

./: Cargo.toml  README.md  build.sh  out.txt
.github/workflows/: rust.yml
data/: INTU01.txt  INTU02.txt  INTU03.txt  INTU04.txt  INTU05.txt  INTU06.txt  INTU07.txt  INTU08.txt  INTU09.txt  INTU10.txt  INTU11.txt  INTU12.txt  INTU13.txt  INTU14.txt  INTU15.txt  INTU16.txt  INTU17.txt  INTU18.txt  INTU20.txt  INTU21.txt  INTU22.txt  INTU23.txt  INTU24.txt  INTU25.txt  INTU26.txt  INTU27.txt  INTU28.txt  INTU29.txt  INTU30.txt  INTU31.txt  INTU32.txt  INTU33.txt  INTU34.txt  INTU36.txt
src/: data.rs  main.rs  question.rs
