[package]
name = "intu_cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
colored = "2.1.0"
rand = "0.8.5"
regex = "1.10.2"
